0.1 2015-11-09
~~~~~~~~~~~~~~

* First beta release (using CODA 2.15).
