@@ -404,10 +404,10 @@ static int read_variable(harp_product *product, int ncid, int varid, harp_dimens
         return -1;
     }
 
-    result = nc_inq_att(ncid, varid, "unit", NULL, NULL);
+    result = nc_inq_att(ncid, varid, "units", NULL, NULL);
     if (result == NC_NOERR)
     {
-        if (read_string_attribute(ncid, varid, "unit", &variable->unit) != 0)
+        if (read_string_attribute(ncid, varid, "units", &variable->unit) != 0)
         {
             harp_add_error_message(" (variable '%s')", netcdf_name);
             return -1;
@@ -886,7 +886,7 @@ static int write_variable_definition(int ncid, const harp_variable *variable, ha
 
     if (variable->unit != NULL)
     {
-        if (write_string_attribute(ncid, *varid, "unit", variable->unit) != 0)
+        if (write_string_attribute(ncid, *varid, "units", variable->unit) != 0)
         {
             return -1;
         }
